--- a/styles/styles.css
+++ b/styles/styles.css
@@ -112,9 +112,6 @@ ul.menu-head {
 .sidebar {
 	float: left;
 	width: 251px;
-	/*background: url(../images/sidebar-bgr.png) repeat;*/
-	/*border-right: 4px solid #672323;*/
-	/*padding: 0 0 315px 0;*/
 }
 
 .sidebar form {
@@ -127,31 +124,42 @@ ul.menu-head {
 	border: 2px solid #fff;
 	width: 150px;
 	background:  url(../images/sidebar-bgr.png);
+	padding: 4px 8px;
 }
 
-dl.sidebar-menu {
+input.button {
+	margin: 4px auto 0;
+	width: auto;
+	padding: 2px 8px;
+	display: block;
+}
+
+ul.sidebar-menu {
 	margin: 6px 0 54px 6px;
 }
 
-.sidebar-menu dt {
-	text-align: center;
-	color: #552929;
-	font-size: 18px;
-}
-
-.sidebar-menu dd {
+.sidebar-menu li {
 	margin: 0 0 0 4px;
-	padding: 2px 0 2px 16px;
+	padding: 2px 0 2px 18px;
 	background: url(../images/list-decor.png) left center no-repeat;
 }
 
-.sidebar-menu dd a {
+.sidebar-menu li a {
 	color: #542A2A;
 	text-decoration: none;
 	font-size: 20px;
 }
 
-.notice h4 {
+.sidebar-menu li a:hover {
+	text-decoration: underline;
+	color: #fff;
+}
+
+li.active a {
+	color: #fff;
+}
+
+.notice h3 {
 	text-align: center;
 	padding: 0 0 0 10px;
 	margin: 0 0 16px;
@@ -167,15 +175,13 @@ dl.sidebar-menu {
 	font-weight: normal;
 }
 
-.notice h5 {
+.notice h4 {
 	text-align: center;
 	font-size: 14px;
 	color: #000;
 }
 
 .sidebar span.further {
-	padding: 0 26px 0 0;
-	background: url(../images/arrow.png) right center no-repeat;
 	float: right;
 	margin: 10px 46px 0 0;
 }
@@ -184,6 +190,12 @@ dl.sidebar-menu {
 	color: #000;
 	font-size: 14px;
 	text-decoration: underline;
+	padding: 0 26px 0 0;
+	background: url(../images/arrow.png) right center no-repeat;
+}
+
+.further a:hover {
+	text-decoration: none;
 }
 
 .content {
@@ -192,14 +204,14 @@ dl.sidebar-menu {
 	border-left: 4px solid #672323;
 }
 
-.content h2 {
+.content h1 {
 	text-align: center;
 	background: url(../images/line.png) bottom center no-repeat;
 	padding: 8px 0 10px;
 	font-size: 24px;
 }
 
-.content h3 {
+.content h2 {
 	text-align: center;
 }
 
@@ -228,12 +240,12 @@ ul.news {
 .news span.further {	
 	float: right;
 	margin: 12px 50px 0 0;
-	padding: 0 26px 0 0;
-	background: url(../images/arrow-brown.png) right center no-repeat;
 }
 
 .news .further a {
 	color: #5F4444;
+	padding: 0 26px 0 0;
+	background: url(../images/arrow-brown.png) right center no-repeat;
 }
 
 ul.pages {
@@ -251,19 +263,19 @@ ul.pages {
 	text-decoration: none;
 }
 
+.pages li a:hover {
+	text-decoration: underline;
+}
+
 .pages li.active a {
 	text-decoration: underline;
 }
 
-.content > p {
-	margin: 0 64px 30px 110px;
-	font-size: 12px;
-	color: #3D1E1E;
-}
-/*
 .footer {
-	border-top: 1px solid #672323;
-	width: 1001px;
-	margin: 0 auto;
-	clear: both;
-}*/
+	margin: 0 64px 30px 110px;
+}
+
+.footer p {
+	font-size: 12px;
+	color: #3D1E1E;	
+}
