--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /*------------------------------RESET DEFAULT STYLES--------------------------------*/
 html,body                       { width:100%; height:100%; }
-body                            { padding:0; margin:0; font: bold 14px "Minion Pro"; background:#fff; color:#000; }
+body                            { padding:0; margin:0; font: 14px "Trebuchet MS"; background:#fff; color:#000; }
 div,p,a,span,em,strong,img,h1,h2,h3,h4,h5,h6,ul,ol,li,dl,dt,dd,table,td,tr,form,fieldset,label,select,checkbox,input,textarea {
 	padding:0;
 	margin:0;
@@ -13,7 +13,7 @@ textarea                       { vertical-align:top; }
 input[type=submit]             { cursor:pointer; }
 img, fieldset                  { border:0; }
 table                          { border-collapse:collapse; border-spacing:0; }
-a:link, a:visited              { font: bold 14px "Minion Pro", serif; color:#000; text-decoration:underline; }
+a:link, a:visited              { font: 14px "Trebuchet MS"; color:#000; text-decoration:underline; }
 a:hover                        { text-decoration:none; }
 /*-------------------------------------DEFAULT CLASSES------------------------------*/
 .float-r           	           { float:right !important; }
@@ -91,6 +91,7 @@ ul.language {
 	font-size: 34px;
 	text-indent: -100px;
 	padding: 40px 0 0 150px;
+	color: #F1E6A2;
 }
 
 ul.menu-head {
@@ -106,7 +107,8 @@ ul.menu-head {
 }
 
 .menu-head a {
-	/*font: bold 14px "Minion Pro", serif;*/
+	font-weight: bold;
+	font-size: 16px;
 }
 
 .sidebar {
@@ -161,7 +163,7 @@ li.active a {
 
 .notice h3 {
 	text-align: center;
-	padding: 0 0 0 10px;
+	padding: 0 0 0 24px;
 	margin: 0 0 16px;
 	background: url(../images/pic-pappers.png) 20% center no-repeat;
 	color: #F1E6A2;
@@ -257,12 +259,14 @@ ul.pages {
 .pages li {
 	display: inline;
 	color: #5F4444;
+	padding: 0 2px;
 }
 
 .pages li a {
 	color: #5F4444;
 	font-size: 14px;
 	text-decoration: none;
+
 }
 
 .pages li a:hover {
@@ -271,6 +275,7 @@ ul.pages {
 
 .pages li.active a {
 	text-decoration: underline;
+	font-size: 18px;
 }
 
 .footer {
